Fix sidebar and content vertical overflow behaviour

--- a/client/src/components/Layout.scss
+++ b/client/src/components/Layout.scss
@@ -2,7 +2,9 @@
   .content {
     position: absolute;
     top: 0;
+    bottom: 0;
     left: 250px;
-    width: calc(100vw - 250px);
+    right: 0;
+    overflow-y: auto;
   }
 }
